--- a/looplist/Base.lproj/Localizable.strings
+++ b/looplist/Base.lproj/Localizable.strings
@@ -100,6 +100,11 @@
 "Setting-AddCheckList" = "Add List";
 /* 設定-Evernoteアカウント */
 "Setting-EvernoteAccount" = "Evernote Account";
+/* 設定-Evernoteアカウント-サインイン済み */
+"Setting-EvernoteAccount-Signed" = "Signed";
+/* 設定-Evernoteアカウント-サインアウト済み */
+"Setting-EvernoteAccount-SignOut" = "Sign out";
+
 
 /* 設定-iCLoud */
 "SettingSection-iCloud" = "iCloud";
@@ -142,7 +147,7 @@
 
 /* ----- iCloudバックアップ画面用 ----- */
 "titleiCloud" = "iCloud";
-"iCloud-Backup-Footer" = "Last backup:\n%@";
+"iCloud-Backup-Footer" = "Last backup:%@";
 "iCloud-Restore-Footer" = "\n\nBackup to iCloud.
 You can also restore the device to the same iCloud account(Apple ID).";
 
