--- a/looplist/ja.lproj/Localizable.strings
+++ b/looplist/ja.lproj/Localizable.strings
@@ -88,12 +88,9 @@
 
 
 /* ----- 設定画面用 ----- */
-/* 設定-チェック日時の表示 */
-"SettingSection-CheckedDate" = "チェック日時の表示";
-/* 設定-チェック日時の表示-簡易表示 */
-"Setting-CheckedDateSimpleDate" = "簡易表示";
-/* 設定-チェック日時の表示-24時間表示 */
-"Setting-CheckedDate24Hour" = "24時間表示";
+"Setting-AlertProVersionTitle" = "Pro版限定機能";
+"Setting-AlertProVersionMessage" = "この機能を使うためにはPro版の購入が必要です。";
+"Setting-AlertProVersionPurchase" = "購入画面へ";
 
 /* 設定-チェックリスト */
 "SettingSection-CheckList" = "チェックリスト";
