--- a/looplist/Base.lproj/Localizable.strings
+++ b/looplist/Base.lproj/Localizable.strings
@@ -56,8 +56,9 @@
 
 
 /* ----- チェックリスト フッター ----- */
-"CheckCompleteSwitchCaption" = "Complete";
+"CheckCompleteButtonCaption" = "Complete";
 "CheckListDetailButtonCaption" = "Edit List....";
+"actionCheckComplete" = "Complete";
 
 
 /* ----- リスト詳細画面 ----- */
