--- a/looplist/ja.lproj/Localizable.strings
+++ b/looplist/ja.lproj/Localizable.strings
@@ -69,6 +69,10 @@
 "FinishDate" = "前回: %@";
 "FinishCount" = "チェック: %d回";
 
+/* 写真を撮るボタン */
+"actionCamera" = "写真を撮る";
+/* 写真を選択ボタン */
+"actionPhoto" = "ライブラリから選択";
 
 /* ----- チェックアイテム詳細画面 ----- */
 
