--- a/looplist/ja.lproj/Localizable.strings
+++ b/looplist/ja.lproj/Localizable.strings
@@ -73,6 +73,8 @@
 "actionCamera" = "写真を撮る";
 /* 写真を選択ボタン */
 "actionPhoto" = "ライブラリから選択";
+/* 写真を削除ボタン */
+"actionRemovePhoto" = "写真を削除";
 
 /* ----- チェックアイテム詳細画面 ----- */
 
